# clove-unit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clove-unit.h  clove.h
.github/: FUNDING.yml
.github/workflows/: ci_action.yml  release_action.yml
cmake/in/: clove-unit-config.cmake.in
cmake/modules/: CLoveModules.cmake  JoinPaths.cmake  _ExtractVersion.cmake  _JoinPaths.cmake
example/: main.c  test1.h  test2.h  test_suite1.h  test_suite2.h  test_suite3.c
examples/auto/: CMakeLists.txt
examples/auto/src/: main.c  suite_auto1.c  suite_auto2.c
examples/clove101/: CMakeLists.txt
examples/clove101/src/: test_suite1.c  test_suite2.c  test_suite3.c
examples/clovepp/: CMakeLists.txt
examples/clovepp/src/: test_suite1.cpp
examples/manual/: CMakeLists.txt
examples/manual/src/: main.c  test_suite1.h  test_suite2.h  test_suite3.c
perfs/: CMakeLists.txt
perfs/src/: perf_test1.c  perf_test2.c  perf_test3.c  perf_test4.c  perf_test5.c  perf_test6.c
perfs/utils/: perf_generator.c
test_report/: CMakeLists.txt
test_report/src/: report_console_test.c  report_json_test.c
tests/: CMakeLists.txt
tests/functs/: CMakeLists.txt
tests/functs/resources/prj01/: CMakeLists.txt
tests/functs/resources/prj01/src/: main.c
tests/functs/src/inte/: cmd_help_test.c  cmd_invalid_test.c  cmd_run_test.c  cmd_testlist_test.c  cmd_version_test.c  run_test.c
tests/functs/src/unit/: asserts_test.c  cmd_test.c  map_test.c  path_test.c  report_csv_test.c  report_json_failed_test.c  report_json_full_test.c  report_json_test.c  report_pretty_failures_test.c  report_pretty_full_test.c  report_pretty_internals_test.c  report_pretty_skipped_test.c  report_pretty_test.c  stack_test.c  string_test.c  stringview_test.c  symbols_test.c
tests/functs/src/utils/: cmd_utils.c  cmd_utils.h  domain_utils.c  domain_utils.h  file_utils.c  file_utils.h  str_utils.c  str_utils.h  utils.c  utils.h
tests/perfs/: CMakeLists.txt
tests/perfs/src/: perf_test1.c  perf_test2.c  perf_test3.c  perf_test4.c  perf_test6.c
tests/perfs/utils/: perf_generator.c
tests/resources/prj01/: CMakeLists.txt
tests/resources/prj01/src/: prj01_test1.c  prj01_test2.c
tests/resources/prj02/: CMakeLists.txt
tests/resources/prj02/src/: prj01_test1.c  prj02_test1.c  prj02_test2.c
tests/resources/prj03/: CMakeLists.txt
tests/resources/prj03/src/: prj03_test1.c
tests/src/: asserts_fail_test.c  asserts_test.c  cmd_test.c  main.c  path_test.c  stack_test.c  string_assert_test.c  time_test.c  vector_test.c
tests/src/inte/: cmd_help_test.c  cmd_invalid_test.c  cmd_testlist_test.c  cmd_version_test.c  run_test.c  selective_test.c  testlist_test.c
tests/src/unit/: asserts_test.c  cmd_test.c  map_test.c  path_test.c  report_console_test.c  report_csv_test.c  report_handler_test.c  report_json_test.c  report_pretty_test.c  string_assert_test.c  string_test.c  stringview_test.c  symbols_test.c  time_test.c  vector_test.c
tests/src/utils/: utils.c  utils.h
tests/stricts/clove-c/: CMakeLists.txt
tests/stricts/clove-cpp/: CMakeLists.txt
tests/stricts/clove-cpp/src/: test_suite1.cpp
tests/stricts/clove-sanity/: CMakeLists.txt
tests/stricts/clove-sanity/src/: test_suite1.c
